# bare-metal-blasterball

./: .gitignore  Cargo.toml  README.md  linker.ld  run.py  run.sh  x  x.rs  x86_64-bios-target.json
artist/: Cargo.toml
artist/src/: bitmap.rs  lib.rs  lib1.rs
artist/src/color/: bios.rs  mod.rs  uefi.rs
blasterball/: Cargo.toml
blasterball/src/: lib.rs  scene.rs  sound.rs  wav.rs
bootloader/: Cargo.toml  build.rs
bootloader/.cargo/: config.toml
bootloader/src/: artist_init.rs  bios.rs  gdt.rs  interrupts.rs  main.rs  uefi.rs
bootloader/src/asm/: stage_1.s  stage_2.s  stage_3.s
collections/: Cargo.toml
collections/src/: allocator.rs  boxed.rs  lib.rs  queue.rs  vec.rs
drivers/src/: keyboard.rs  lib.rs
event_hook/: Cargo.toml
event_hook/src/: boxed_fn.rs  lib.rs
lazy_static/: Cargo.toml
lazy_static/src/: lib.rs  tests.rs
machine/: Cargo.toml
machine/src/: acpi.rs  apic.rs  cmos.rs  font.rs  gdt.rs  instructions.rs  interrupts.rs  lib.rs  memory.rs  pic8259.rs  port.rs  power.rs  printer.rs  registers.rs  tss.rs  uefi.rs
machine/src/keyboard/: mod.rs  uefi.rs
num/: Cargo.toml
num/src/: lib.rs  tests.rs
physics/: Cargo.toml
physics/src/: lib.rs
printer/: Cargo.toml
printer/src/: font.rs  lib.rs
sound/: Cargo.toml
sound/src/: font.rs  lib.rs  lib1.rs  macros.rs  printer.rs  wav.rs
sync/src/: lib.rs  mutex.rs  once.rs
tester/src/: lib.rs
