[package]
name = "blasterball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
artist = { path = "../artist" }
machine = { path = "../machine" }
event_hook = { path = "../event_hook" }
physics = { path = "../physics" }
collections = { path = "../collections" }
sync = { path = "../sync" }
num = { path = "../num" }
lazy_static = { path = "../lazy_static" }
sound = { path = "../sound" }