[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printer = { path = "../printer" }
blasterball = { path = "../blasterball" }
machine = { path = "../machine" }
tester = { path = "../tester" }
lazy_static = { path = "../lazy_static" }
sync = { path = "../sync" }
drivers = { path = "../drivers" }
collections = { path = "../collections" }
event_hook = { path = "../event_hook" }