[package]
name = "printer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { path = "../num" }
lazy_static = { path = "../lazy_static" }
sync = { path = "../sync" }
machine = { path = "../machine" }