[package]
name = "sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
machine = { path = "../machine" }
num = { path = "../num" }
collections = { path = "../collections" }
sync = { path = "../sync" }
event_hook = { path = "../event_hook" }
lazy_static = { path = "../lazy_static" }
artist = { path = "../artist" }